// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PathPreviewButton has WebGL no devices connected in desktop version 1`] = `
<div>
  <div
    class="button highlighted"
    title="Path preview"
  >
    <svgr-url />
  </div>
</div>
`;

exports[`test PathPreviewButton has WebGL no devices connected in web version 1`] = `
<div>
  <div
    class="button disabled highlighted"
    title="Path preview"
  >
    <svgr-url />
  </div>
</div>
`;

exports[`test PathPreviewButton no WebGL 1`] = `<div />`;

exports[`test PathPreviewButton workarea is Ador should not render 1`] = `<div />`;
